# backend

./: API_DOCUMENTATION.md  Cargo.toml  Sistema_Gestao_Residuos.postman_collection.json  sistema.db
Mensagens/: predicao.txt
data/: db.json
output/: predicao.csv  predicao.json
predicao_ml/: Cargo.toml  sistema.db
predicao_ml/Mensagens/: predicao.txt
predicao_ml/data/: db.json  distancias.json
predicao_ml/output/: modelo.json  predicao.csv  predicao.json
predicao_ml/src/: actions.rs  auth.rs  main.rs  predicao.rs  predicoes_module.rs
predicao_ml/src/otimizacao/: models.rs
src/: actions.rs  auth.rs  dataset.rs  ia_api.rs  main.rs  modelo.rs  predicao.rs
src/api/: handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs
src/otimizacao/: mod.rs  models.rs  services.rs
